project is done

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -41,6 +41,7 @@
 
   &__picture {
     width: $onMobileContent;
+    transition: transform 300ms;
 
     @include onTablet {
       width: auto;
@@ -48,6 +49,10 @@
 
     @include onDesktop {
       width: auto;
+    }
+
+    &:hover {
+      transform: scale(1.05);
     }
   }
 
