--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,4 +6,7 @@
 @import "blocks/events";
 @import "blocks/lection";
 @import "blocks/gallery";
+@import "blocks/subscribe";
+@import "blocks/contacts";
+@import "blocks/info";
 @import "blocks/nav";
