--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -10,6 +10,7 @@ $main-background-color: #fff;
 $content-font: "IBM Plex Sans", "Helvetica", "Arial", sans-serif;
 $header-font: "Montserrat", "Helvetica", "Arial", sans-serif;
 $header-font-color: #0f0e08;
+$logo-font-color:#0f0e08;
 
 // Modal Window
 $modal-main-background-color: #1a5a4c;
@@ -34,3 +35,17 @@ $content-font-color: #4e4e4e;
 // Gallery
 $dots-color: #e0e0e0;
 $dots-active-color: #1a5a4c;
+
+// Form
+$submit-btn-background-color: #f14a27;
+$submit-btn-background-color-hover: #b83920;
+$placeholder-font-color: #687480;
+
+// Contacts
+$border-color: #1a5a4c;
+$schedule-font-color: #0f0e08;
+$nav-link-font-color: #0f0e08;
+$nav-link-border-color: #f14a27;
+
+// Info
+$content-font-color: #0f0e08;
