--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
 @import "./blocks/header.scss";
 @import "./blocks/title.scss";
 @import "./blocks/art-museum.scss";
+@import "./blocks/button-ticket.scss";
 @import "./blocks/current-events.scss";
 @import "./blocks/description.scss";
 @import "./blocks/classicism.scss";
