--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -46,3 +46,10 @@
     #{$property}: $toValue;
   }
 }
+
+@mixin photo ($property, $toValue) {
+  transition: #{$property} $effectDuration;
+  &:hover {
+    #{$property}: $toValue;
+  }
+}
