--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -64,6 +64,7 @@
       grid-column: 3 / 5;
     }
   }
+
   &__address {
     margin-top: 40px;
     display: flex;
@@ -79,6 +80,14 @@
     @include onDesktop {
       grid-column: 5 / 7;
     }
+  }
+
+  &__link {
+    margin: 0;
+    display: block;
+    color: inherit;
+    text-decoration: none;
+    width: fit-content;
   }
 
   &__line {
