--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -26,6 +26,8 @@
   }
 
   &__link {
+    display: block;
+    width: fit-content;
     text-decoration: none;
     color: $secondTextColor;
     font-size: 16px;
