--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -43,9 +43,10 @@ $placeholder-font-color: #687480;
 
 // Contacts
 $border-color: #1a5a4c;
+$social-background-color-hover: #f14a27;
 $schedule-font-color: #0f0e08;
 $nav-link-font-color: #0f0e08;
-$nav-link-border-color: #f14a27;
+$nav-link-font-color-hover: #f14a27;
 
 // Info
 $content-font-color: #0f0e08;
