add task solution

--- a/src/styles/block/footer.scss
+++ b/src/styles/block/footer.scss
@@ -25,6 +25,10 @@
       justify-content: flex-start;
       margin-right: 20px;
     }
+
+    @include onDesctop {
+      margin-top: 0;
+    }
   }
 
   &__icons {
@@ -92,12 +96,17 @@
   &__weekend {
     margin-top: 30px;
     @extend %p;
+
+    @include onDesctop {
+      width: 170px;
+    }
   }
 
   &__contacts {
     flex-basis: 220px;
 
     @include onDesctop {
+      width: 170px;
       flex-basis: 170px;
     }
   }
@@ -117,6 +126,12 @@
     color: $color-link-button;
 
     @include hoverAfterFooter(transform, scale(1));
+  }
+
+  &__fax-link {
+    @include onDesctop {
+      width: 100px;
+    }
   }
 
   &__button {
@@ -169,7 +184,7 @@
 
     @include onDesctop {
       margin-top: 0;
-      justify-content: space-between;
+      gap: 70px;
     }
   }
 
