--- a/src/styles/block/slaider.scss
+++ b/src/styles/block/slaider.scss
@@ -1,4 +1,10 @@
 .slaider {
+  &__container {
+    @include onTablet {
+      width: max-content;
+      margin: 0 auto;
+    }
+  }
   &__item {
     margin-bottom: 20px;
     display: flex;
@@ -7,6 +13,7 @@
     @include onTablet {
       margin-bottom: 32px;
       justify-content: space-around;
+      gap: 20px;
     }
 
     @include onDesctop {
