added transition and fixed image width

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -228,9 +228,12 @@ body {
   line-height: 100%;
   text-decoration: none;
   position: relative;
+  text-decoration: underline;
+  text-decoration-color: transparent;
+  transition: 0.3s;
 
   &:hover {
-    text-decoration: underline;
+    text-decoration-color: white;
   }
 }
 
@@ -407,7 +410,7 @@ body {
   align-items: center;
 
   &__img {
-    width: 100%;
+    width: 100vw;
   }
 
   &__info {
@@ -860,6 +863,10 @@ input[type="radio"]:checked {
 
   .gallery {
     align-items: center;
+  }
+
+  .lesson__img {
+    height: 600px;
   }
 }
 
