--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -11,6 +11,10 @@
   margin-right: 55px;
   background-color: #fff;
   height: 457px;
+  } 
+  @include onTablet {
+    margin-left: 34px;
+    margin-right: 20px;
   }
  
 
@@ -197,6 +201,11 @@ padding-right: 30px;
   padding-bottom: 62px;
   background-repeat: no-repeat;
   }
+
+  @include onTablet {
+    width: 65px;
+  height: 65px;
+  }
  
 }
  
@@ -219,7 +228,7 @@ padding-right: 30px;
       height: 24px;
       background-position: center;
       background-repeat: no-repeat;
-      padding-right: 22px;
+      padding-right: 32px;
 
       &:hover {
         scale: 1;
