--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -27,7 +27,7 @@
    
     background-image: url(../images/header-mob2.png);
     height: 300px;
-    width: 320px;
+    width: 100%;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -137,7 +137,7 @@
     }
 
     @include onTablet {
-     
+      display: block;
       width: 45px;
       height: 45px;
       padding-left: 300px;
@@ -145,11 +145,15 @@
       right: 250px;
     }
 
+    @media only screen and (max-width: 639px) {
+      display: none
+    }
+
   
     &-mob {
       width: 55px;
       height: 61px;
-      margin-left: 95px;
+      padding-right: 133px;
       padding-top: 0;
       padding-top: 12px;
 
