--- a/src/styles/blocks/ivent.scss
+++ b/src/styles/blocks/ivent.scss
@@ -146,11 +146,20 @@ margin-right: 0;
 
   &-time {
     @include onMobile {
+      display: flex;
       padding-top: 20px;
+      justify-content: space-between;
     }
 
-    display: flex;
-    gap: 20px;
+    @include onDesktop {
+      justify-content: flex-start;
+      gap: 20px
+    }
+
+    @include onTablet {
+      justify-content: flex-start;
+     gap: 20px;
+    }
 
     &-date {
       color: #1A5A4C;
@@ -163,7 +172,7 @@ margin-right: 0;
       font-family: "IBM Plex Sans";
       color:#687480;
       font-size: 16px;
-      font-weight: 400;
+      font-weight: 500;
 
     }
   }
@@ -293,6 +302,7 @@ margin-right: 0;
         line-height: 28px;
         margin: 0 auto;
         text-align: center;
+        padding-top: 20px;
       }
     @include onDesktop {
       font-family: "Montserrat";
