--- a/src/styles/blocks/classic-romantic.scss
+++ b/src/styles/blocks/classic-romantic.scss
@@ -32,18 +32,22 @@
   &__lecture {
     grid-column: 1 / -1;
     margin-top: -57px;
-    padding: 24px 0 20px;
+    padding: 20px 0;
     background-color: $color-white;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
 
     @include onTablet {
+      padding: 45px 55px 50px 55px;
       margin-inline: 65px;
       padding-inline: 55px;
+      text-align: left;
     }
 
     @include onDesktop {
+      padding: 45px 100px 50px 100px;
       margin-inline: 355px;
       padding-inline: 80px;
+      text-align: left;
     }
   }
 
