--- a/src/styles/blocks/events-exhibition.scss
+++ b/src/styles/blocks/events-exhibition.scss
@@ -25,12 +25,13 @@
 
     @include onTablet {
       grid-column: 1 / span 4;
-      margin-top: 40px;
-      gap: 30px;
+      margin-top: 44px;
+      gap: 32px;
     }
 
     @include onDesktop {
       grid-column: 9 / -1;
+      margin-top: 0;
     }
   }
 
