--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -42,6 +42,11 @@
 
     @include onTablet {
       gap: 32px;
+      margin-bottom: auto;
+    }
+
+    @include onDesktop {
+      margin-bottom: auto;
     }
   }
 
