--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -36,6 +36,7 @@
       display: flex;
       justify-content: space-evenly;
       width: 100%;
+      gap: 24px;
     }
   }
 
@@ -46,10 +47,12 @@
     @include onTablet {
       grid-column: 4 / -1;
       margin-top: 0;
+      margin-left: 38px;
     }
 
     @include onDesktop {
       grid-column: 7 / -2;
+      margin-left: 102px;
     }
   }
 }
