--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -6,6 +6,10 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
+
+    @include onDesktop {
+      gap: 30px;
+    }
   }
 
   &__link {
