--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -4,6 +4,8 @@
   scroll-behavior: smooth;
 
   &__body {
+    block-size: 100%;
+
     &--hidden {
       overflow: hidden;
     }
@@ -26,7 +28,20 @@
     &--open {
       transform: translate(0);
       opacity: 1;
+      overflow-y: auto;
     }
+  }
+
+  &__overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #18181A;
+    z-index: 1;
+    display: none;
+    opacity: 0.5;
   }
 
   &__footer {
