--- a/src/styles/blocks/actual-events.scss
+++ b/src/styles/blocks/actual-events.scss
@@ -28,6 +28,11 @@
     @include onTablet {
       font-size: 48px;
       text-align-last: left;
+      margin-bottom: 48px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 56px;
     }
   }
 }
