--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -9,6 +9,10 @@
       font-size: 48px;
       text-align: left;
     }
+
+    @include onDesktop {
+      margin-bottom: 56px;
+    }
   }
 
   &__container {
