--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -13,7 +13,9 @@
 
     @include onTablet {
       grid-column: 4 / span 2;
-      width: auto;
+      margin-top: 15px;
+      width: 220px;
+      height: 72px;
       font-size: 36px;
       transform: translateX(0%);
     }
