--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -60,7 +60,7 @@
       width: unset !important;
       margin: 0 !important;
 
-      @include hover(transform, scale(1.05));
+      @include hover(transform, scale(1.05) translateZ(0));
       cursor: pointer;
     }
   }
