--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -15,6 +15,8 @@
 
   &--menu-close {
     background-image: url(../images/icons/icon-burger-menu-close.svg);
+
+    @include hover(transform, scale(1.1));
   }
 
   &--instagram {
