--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -19,6 +19,12 @@
     color: $title-color;
     font-weight: 400;
     font-size: 14px;
+    transition: 0.3s ease;
+
+    &:hover {
+      transition: 0.3s ease;
+      filter: drop-shadow(0 0 2px black);
+    }
 
     &-block {
       display: flex;
