--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -20,6 +20,10 @@
     outline: none;
     border: none;
 
+    &:-webkit-autofill {
+      transition: 5000s ease;
+    }
+
     &::placeholder {
       font-family: "Montserrat", sans-serif;
       font-weight: 400;
