--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -62,6 +62,12 @@
     font-weight: 500;
     font-size: 16px;
     color: #fff;
+    transition: 0.3s ease;
+
+    &:hover {
+      filter: drop-shadow(0 0 2px #fff);
+      transition: 0.3s ease;
+    }
   }
 
   &__info {
