--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,3 +24,7 @@ html {
   scroll-behavior: smooth;
   font-family: "Montserrat", sans-serif;
 }
+
+input:-webkit-autofill {
+  background-color: #fff;
+}
