--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -11,11 +11,14 @@
 }
 
 .container {
-  width: $onMobileContent;
+  width: 100%;
   margin: 0 auto;
+  padding-inline: 20px;
 
   @include onTablet {
     width: $onTabletContent;
+    margin: 0 auto;
+    padding-inline: 0;
   }
 
   @include onDesktop {
