--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -8,6 +8,15 @@
   }
 
   &__wrap {
+    &--main {
+      display: flex;
+      flex-direction: column;
+
+      @include onTablet {
+        flex-direction: row;
+      }
+    }
+
     &--top {
       display: flex;
       justify-content: space-between;
@@ -28,6 +37,7 @@
     }
 
     &--bottom {
+      position: relative;
       display: flex;
       flex-direction: column;
       gap: 20px;
@@ -47,8 +57,11 @@
     &--middle {
       display: flex;
       gap: 20px;
-      padding-bottom: 70px;
       border-bottom: 1px solid $border-color;
+
+      @include onTablet {
+        padding-bottom: 70px;
+      }
 
       @include onDesktop {
         padding-right: 65px;
@@ -57,9 +70,17 @@
         border-right: 1px solid $border-color;
       }
     }
+
+    &--arrow {
+      display: flex;
+      justify-content: flex-end;
+      margin-bottom: 40px;
+    }
   }
 
   &__name {
+    display: block;
+    text-decoration: none;
     color: $logo-font-color;
     font-family: $header-font;
     font-size: 36px;
@@ -69,9 +90,6 @@
   }
 
   &__arrow {
-    position: absolute;
-    right: 0;
-    bottom: 148px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -133,7 +151,6 @@
       font-size: 14px;
       font-style: normal;
       font-weight: 400;
-
     }
 
     &--title {
@@ -147,14 +164,25 @@
   }
 
   &__group {
+    display: flex;
+    flex-direction: column;
+
     &--title,
     &--content {
-      color: $schedule-font-color;
-      font-family: $content-font;
-      font-size: 14px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 150%;
+      & a {
+        color: $schedule-font-color;
+        font-family: $content-font;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 150%;
+        text-decoration: none;
+        transition: color 300ms;
+      }
+
+      & a:hover {
+        color: $nav-link-font-color-hover;
+      }
     }
 
     &--title {
@@ -164,6 +192,7 @@
 
     &--content {
       line-height: 150%;
+      margin-bottom: 16px;
     }
   }
 
