--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -20,39 +20,45 @@
     }
   }
 
+  &__picture-outer {
+    @include onDesktop {
+      display: flex;
+      overflow: hidden;
+
+      &:nth-child(2) {
+        display: none;
+      }
+    }
+  }
+
   &__carousel {
     display: flex;
-    align-items: flex-start;
     flex-wrap: nowrap;
     gap: 20px;
-    width: $onMobileContent;
+    width: 100%;
     overflow: hidden;
-
-    @include onTablet {
-      width: $onTabletContent;
-    }
 
     @include onDesktop {
       flex-wrap: wrap;
       gap: 30px;
-      width: 100%;
     }
   }
 
   &__picture {
-    width: $onMobileContent;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
     transition: transform 300ms;
-
-    @include onTablet {
-      width: auto;
-    }
-
-    @include onDesktop {
-      width: auto;
-    }
 
     &:hover {
       transform: scale(1.05);
+    }
+
+    @include onDesktop {
+      &:nth-child(2) {
+        display: none;
+      }
     }
   }
 
