add task solution

--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -41,9 +41,15 @@
   &__link {
     position: relative;
     color: inherit;
+    font-family: $font-family2;
     font-style: normal;
     font-weight: 500;
     line-height: 100%;
+    font-size: 14px;
+
+    @include onDesktop {
+      font-size: 22px;
+    }
 
     &--bottom {
       font-size: inherit;
