--- a/src/styles/blocks/working-hours.scss
+++ b/src/styles/blocks/working-hours.scss
@@ -15,6 +15,7 @@
     list-style: none;
     padding: 0;
     margin: 0;
+    font-family: $font-family2;
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
