--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,13 @@
+// %h1 {
+//   font-family: "Roboto", sans-serif;
+//   font-weight: 400;
+// }
 %h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+}
+
+%p {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 300;
 }
