--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,65 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin onTablet {
+  @media (min-width: $tablet-min-width) {
+    @content;
+  }
+}
+
+@mixin onDesktop {
+  @media (min-width: $desktop-min-width) {
+    @content;
+  }
+}
+
+@mixin contentPaddingInLine() {
+  padding-inline: 20px;
+
+  @include onTablet {
+    padding-inline: 39px;
+  }
+
+  @include onDesktop() {
+    max-width: 1260px;
+    margin-inline: auto;
+    padding-inline: 55px;
+  }
+}
+
+.container {
+  @include contentPaddingInLine;
+}
+
+@mixin pageGrid {
+  --columns: 2;
+
+  display: grid;
+  column-gap: 20px;
+  grid-template-columns: repeat(var(--columns), 1fr);
+
+  @include onTablet {
+    --columns: 6;
+    column-gap: 30px;
+    grid-template-rows: max-content;
+  }
+
+  @include onDesktop {
+    --columns: 12;
+    column-gap: 30px;
+    grid-template-rows: max-content;
+  }
+}
+
+@mixin fontTitle {
+  font-family: Montserrat, sans-serif;
+  font-weight: 400;
+  line-height: 100%;
+}
+
+@mixin fontDescription {
+  font-family: IBM Plex Sans, sans-serif;
+  font-weight: 400;
+  line-height: 100%;
+}
