mueseum_first_edition

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,28 @@
 @import "utils";
-@import "fonts";
-@import "typography";
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/footer.scss";
+@import "./utils/mixins";
+@import "./sections/menu.scss";
+@import "./blocks/menuTop.scss";
+@import "./blocks/menuBottom.scss";
+@import "./sections/actualEvents.scss";
+@import "./sections/lecture.scss";
+@import "./sections/galery.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/pointer.scss";
+@import "./sections/subscribe.scss";
+@import "./sections/bottomList.scss";
 
 body {
   background: $c-gray;
+}
+
+body,
+h1,
+h2,
+h3,
+p,
+ul {
+  margin: 0;
 }
