--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,36 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin smartphone {
+  @media (max-width: 767px) {
+    @content;
+  }
+}
+
+@mixin desktop {
+  @media (min-width: 1280px) {
+    @content;
+  }
+}
+
+@mixin design {
+  @media (min-width: 1440px) {
+    @content;
+  }
+}
+
+@mixin link {
+  font-family: "IBM Plex Sans", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  text-decoration: none;
+  line-height: 100%;
+  color: #fff;
+  transition: all 0.3s;
+  
+  &:hover {
+    color: blue;
+  }
+}
