add go to top button

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,5 +3,21 @@
 @import "typography";
 
 body {
-  background: $c-gray;
+  background: $c-white;
 }
+
+@import "blocs/header";
+@import "blocs/page";
+@import "blocs/icon";
+@import "blocs/top-bar";
+@import "blocs/nav";
+@import "blocs/schedule";
+@import "blocs/menu";
+@import "blocs/button";
+@import "blocs/events";
+@import "blocs/event-card";
+@import "blocs/galery";
+@import "blocs/main";
+@import "blocs/subscript";
+@import "blocs/footer";
+@import "blocs/back-to-top";
