--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,21 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./variables";
+@import "./mixin";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/container.scss";
+
+@import "./blocks/header.scss";
+@import "./blocks/top-bar.scss";
+
+@import "./blocks/aside.scss";
+
+@import "./blocks/currentEvents.scss";
+@import "./blocks/event.scss";
+
+@import "./blocks/classicism.scss";
+
+@import "./blocks/gallery.scss";
+
+@import "./blocks/subscription.scss";
+
+@import "./blocks/footer.scss";
