--- a/src/styles/blocs/menu.scss
+++ b/src/styles/blocs/menu.scss
@@ -9,6 +9,18 @@
   pointer-events: none;
   padding: 27px 0;
   background-color: $green-color;
+  z-index: 4;
+
+  &::after {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 225px;
+    width: 100%;
+    height: 100vh;
+    background-color: #18181a80;
+    z-index: 1;
+  }
 
   @include onTablet {
     padding: 40px 0;
