--- a/src/styles/blocs/nav.scss
+++ b/src/styles/blocs/nav.scss
@@ -28,6 +28,7 @@
   }
 
   &__link {
+    position: relative;
     display: block;
     width: 100px;
 
@@ -35,7 +36,7 @@
     text-decoration: none;
     font-size: 16px;
     font-weight: 500;
-    color: #fff;
+    color: $c-white;
 
     @include onDesktop {
       font-size: 22px;
@@ -48,7 +49,7 @@
       display: block;
       height: 1px;
       width: 100%;
-      background-color: #292929;
+      background-color: $c-white;
       transition: transform 0.3s;
       transform: scale(0);
       transform-origin: left;
@@ -62,7 +63,7 @@
   &__border {
     height: 1px;
     width: 100%;
-    background-color: #fff;
+    background-color: $c-white;
 
     @include onTablet {
       height: 100%;
