--- a/src/styles/blocs/page.scss
+++ b/src/styles/blocs/page.scss
@@ -1,5 +1,9 @@
 .page {
   scroll-behavior: smooth;
+
+  &:has(.page__menu:target) {
+    overflow: hidden; /* not to scroll the page */
+  }
   
   &__body {
     margin: 0 auto;
