--- a/src/styles/blocs/button.scss
+++ b/src/styles/blocs/button.scss
@@ -12,7 +12,7 @@
   text-decoration: none;
   text-transform: uppercase;
 
-  color: #000;
+  color: $c-black;
   width: 280px;
   border: 1px solid $green-color;
   text-align: center;
@@ -27,9 +27,6 @@
 
   @include onDesktop {
     grid-column: 3 / 6;
-    // justify-self: left;
-    // width: 280px;
-    // line-height: 70px;
   }
 
   &::after {
