--- a/src/styles/blocs/event-card.scss
+++ b/src/styles/blocs/event-card.scss
@@ -1,7 +1,4 @@
 .event-card {
-  // display: flex;
-  // flex-direction: column;
-  // gap: 16px;
   grid-column: span 2;
   @include pageGrid;
   row-gap: 16px;
@@ -18,6 +15,7 @@
 
     &--lecture {
       height: 210px;
+
       @include onTablet {
         height: 390px;
       }
@@ -26,6 +24,7 @@
     @include onTablet {
       grid-column: 1 / -1;
     }
+
     @include onDesktop {
       grid-column: 1 / span 7;
     }
@@ -44,6 +43,7 @@
       row-gap: 15px;
 
     }
+
     @include onDesktop {
       grid-template-rows: min-content;
       grid-column: 9 / span 4;
@@ -86,6 +86,7 @@
       grid-column: span 2;
       padding-bottom: 17px;
     }
+
     @include onDesktop {
       grid-column: 1 / -1;
       gap: 30px;
@@ -107,7 +108,7 @@
     }
 
     &--type {
-      color: #687480;
+      color: $blue-gray-color;
       font-family: IBM Plex Sans, sans-serif;
       font-size: 16px;
       font-weight: 500;
@@ -143,7 +144,7 @@
     gap: 14px;
     align-items: center;
 
-    color: #0f0e08;
+    color: $general-text-color;
     font-family: Montserrat, sans-serif;
     font-size: 28px;
     font-weight: 400;
@@ -156,7 +157,7 @@
       align-self: center;
       width: 10px;
       height: 10px;
-      background: #f14a27;
+      background: $orange-marcker-color;
 
       @include onTablet {
         width: 15px;
@@ -194,7 +195,7 @@
   &__description {
     grid-column: span 2;
 
-    color: #4e4e4e;
+    color: $darck-grey-color;
 
     @include fontDescription;
     font-size: 16px;
@@ -204,6 +205,7 @@
     @include onTablet {
       grid-column: 1 / 5;
     }
+
     @include onDesktop {
       grid-column: 1 / -1;
     }
