--- a/src/styles/blocs/events.scss
+++ b/src/styles/blocs/events.scss
@@ -9,6 +9,7 @@
     @include onTablet {
       row-gap: 64px;
     }
+
     @include onDesktop {
       row-gap: 104px;
     }
@@ -21,7 +22,7 @@
     @include fontTitle;
     font-size: 36px;
     font-weight: 700;
-    color: #0f0e08;
+    color: $general-text-color;
 
     @include onDesktop {
       font-size: 48px;
