--- a/src/styles/blocs/galery.scss
+++ b/src/styles/blocs/galery.scss
@@ -4,6 +4,8 @@
     @include pageGrid;
     row-gap: 20px;
 
+    @include hover(transform, scale(1.06));
+
     @include onDesktop {
       display: none;
     }
@@ -33,6 +35,8 @@
     display: none;
 
     @include onDesktop {
+      @include hover(transform, scale(1.06));
+
       @include pageGrid;
       row-gap: 30px;
 
@@ -66,7 +70,7 @@
       width: 9px;
       height: 9px;
       border-radius: 50%;
-      background-color: #e5e5e5;
+      background-color: $midle-gray-color;
 
       &--active {
         background-color: $green-color;
@@ -74,3 +78,11 @@
     }
   }
 }
+
+// .galery__blocks:nth-child(-n + 1) {
+//   transition: transform 0.3s;
+
+//   &:hover {
+//     transform: scale(1.2);
+//   }
+// }
