--- a/src/styles/blocs/header.scss
+++ b/src/styles/blocs/header.scss
@@ -1,7 +1,5 @@
 .header {
-  // padding-bottom: 70px;
   height: 480px;
-  // background-color: #fff;
 
   @include onTablet {
     height: 384px;
@@ -59,7 +57,7 @@
       font-size: 45px;
       line-height: 100%;
       text-transform: uppercase;
-      color: #000;
+      color: $c-black;
 
       @include onTablet {
         grid-column: 1 / 4;
@@ -83,7 +81,7 @@
       font-weight: 700;
       text-decoration: none;
       text-transform: uppercase;
-      color: #687480;
+      color: $blue-gray-color;
       transform: rotate(270deg);
       bottom: 95px;
 
