--- a/src/styles/blocs/menu.scss
+++ b/src/styles/blocs/menu.scss
@@ -1,4 +1,5 @@
 .menu {
+  --height: 0;
   position: fixed;
   top: 0;
   left: 0;
@@ -15,10 +16,10 @@
     content: "";
     position: absolute;
     display: block;
-    top: 225px;
+    top: var(--height);
     width: 100%;
-    height: 100vh;
-    background-color: #18181a80;
+    height: calc(100vh - var(--height));
+    background-color: $darck-blue-translucent-color;
     z-index: 1;
   }
 
