--- a/src/styles/blocs/schedule.scss
+++ b/src/styles/blocs/schedule.scss
@@ -23,7 +23,7 @@
 
   &__title {
     padding-bottom: 20px;
-    color: #fff;
+    color: $c-white;
     @include fontDescription;
     font-size: 14px;
     line-height: 140%;
@@ -37,14 +37,14 @@
   }
 
   &__item {
-    color: #fff;
+    color: $c-white;
     @include fontDescription;
     font-size: 14px;
     line-height: 150%;
   }
 
   &__weekend {
-    color: #fff;
+    color: $c-white;
     @include fontDescription;
     font-size: 14px;
     line-height: 150%;
