--- a/src/styles/blocs/footer.scss
+++ b/src/styles/blocs/footer.scss
@@ -57,17 +57,17 @@
     }
 
     &__title {
-      color: #0f0e08;
+      color: $general-text-color;
     }
 
     &__item {
-      color: #0f0e08;
+      color: $general-text-color;
       overflow-wrap: break-word;
       white-space: wrap;
     }
 
     &__weekend {
-      color: #0f0e08;
+      color: $general-text-color;
     }
   }
 
@@ -81,13 +81,13 @@
     }
 
     &__title {
-      color: #0f0e08;
+      color: $general-text-color;
     }
 
     &__content {
       display: block;
       text-decoration: none;
-      color: #0f0e08;
+      color: $general-text-color;
 
       @include fontDescription;
       font-size: 14px;
@@ -99,7 +99,7 @@
     height: 1px;
     width: 100%;
     grid-column: 1 / -1;
-    background-color: #1a5a1c80;
+    background-color: $green-translucent-color;
 
     @include onTablet {
       grid-column: 2 / 6;
@@ -145,7 +145,7 @@
       position: relative;
       font-size: 14px;
       text-decoration: none;
-      color: #0f0e08;
+      color: $general-text-color;
 
       &::after {
         content: "";
@@ -154,12 +154,12 @@
         display: block;
         height: 1px;
         width: 100%;
-        background-color: #1a5a1c80;
+        background-color: $green-translucent-color;
         transition: transform 0.3s;
         transform: scale(0);
         transform-origin: left;
       }
-  
+
       &:hover::after {
         transform: scale(1);
       }
