--- a/src/styles/blocs/subscript.scss
+++ b/src/styles/blocs/subscript.scss
@@ -11,7 +11,7 @@
     align-items: center;
     padding: 88px 0 50px;
     text-align: center;
-    color: #fff;
+    color: $c-white;
 
     @include onTablet {
       padding: 82px 0 54px;
@@ -84,7 +84,7 @@
       display: block;
       width: 50px;
       height: 50px;
-      background-color: #f14a27;
+      background-color: $orange-marcker-color;
       background-image: url(../images/icons/keyboard_arrow_right-black.svg);
       background-repeat: no-repeat;
       background-position: center;
