--- a/src/styles/blocs/top-bar.scss
+++ b/src/styles/blocs/top-bar.scss
@@ -31,7 +31,7 @@
     grid-row: 1 / 1;
     grid-column: 1 / -1;
     text-decoration: none;
-    color: #0f0e08;
+    color: $general-text-color;
     text-transform: uppercase;
     font-family: "Montserrat", sans-serif;
     font-size: 30px;
