--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,5 +1,5 @@
 .header {
-  position: relative;
+  // position: relative;
   padding-bottom: 35px;
 
   @include onTablet {
@@ -22,19 +22,19 @@
     background-image: url(../images/header.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-
+    background-position: center;
     width: 100vw;
     height: 300px;
 
     @include onTablet {
-      width: 374px;
+      width: 50%;
       height: 384px;
 
       right: 0;
     }
 
     @include onDesktop {
-      width: 725px;
+      width: 52%;
       height: 655px;
     }
   }
