--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -205,6 +205,11 @@
       font-size: 14px;
       font-weight: 400;
       line-height: 21px;
+      transition: all $transitions;
+
+      &:hover {
+        font-weight: 500;
+      }
     }
   }
   &__menu {
