--- a/src/styles/blocs/header.scss
+++ b/src/styles/blocs/header.scss
@@ -55,6 +55,7 @@
 
       @include fontTitle;
       font-size: 45px;
+      font-weight: 700;
       line-height: 100%;
       text-transform: uppercase;
       color: $c-black;
