--- a/src/styles/blocs/nav.scss
+++ b/src/styles/blocs/nav.scss
@@ -64,6 +64,7 @@
     height: 1px;
     width: 100%;
     background-color: $c-white;
+    opacity: 0.5;
 
     @include onTablet {
       height: 100%;
