--- a/src/styles/blocs/page.scss
+++ b/src/styles/blocs/page.scss
@@ -1,5 +1,8 @@
 .page {
   scroll-behavior: smooth;
+  outline: none;
+  -moz-outline: none;
+  -webkit-outline: none;
 
   &:has(.page__menu:target) {
     overflow: hidden; /* not to scroll the page */
