--- a/src/styles/blocs/subscript.scss
+++ b/src/styles/blocs/subscript.scss
@@ -78,6 +78,19 @@
       @include onDesktop {
         width: 470px;
       }
+
+      &:hover,
+      &:focus,
+      &:active {
+        box-shadow: 0 0 10px 2 rgba(255, 255, 255, 0.5);
+      }
+
+      &:-webkit-autofill,
+      &:-webkit-autofill:hover,
+      &:-webkit-autofill:focus,
+      &:-webkit-autofill:active {
+        -webkit-box-shadow: 0 0 0 50px $c-white inset;
+      }
     }
 
     &--button {
@@ -94,6 +107,10 @@
       @include onTablet {
         width: 70px;
         height: 70px;
+      }
+
+      &:hover {
+        box-shadow: 0 0 10px 2 rgba(241, 74, 39, 0.5);
       }
     }
   }
