--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -1,18 +1,16 @@
 .aside {
-  display: none;
+  position: fixed;
+  top: -100%;
+  transition: top $transitions ease;
 
   &--active {
-    display: block;
     background-color: $colorBorder;
     padding: 27px 0;
 
-    position: fixed;
     top: 0;
     left: 0;
     right: 0;
     z-index: 2;
-    transition: all ease-in 1s;
-    transform: translate();
 
     @include onTablet {
       padding: 40px 0;
@@ -69,7 +67,7 @@
     &-cross {
       width: 24px;
       height: 24px;
-      transition: transform $transitions;
+      transition: all $transitions;
 
       &:hover {
         transform: scale($scale);
