--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -208,7 +208,7 @@
       transition: all $transitions;
 
       &:hover {
-        font-weight: 500;
+        color: #F14A27;
       }
     }
   }
@@ -255,6 +255,11 @@
       font-size: 14px;
       text-decoration: none;
       color: $colorBlackText;
+      transition: all $transitions;
+
+      &:hover {
+        color: #F14A27;
+      }
     }
   }
 
