--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -3,6 +3,10 @@
   scroll-behavior: smooth;
   overflow-x: hidden;
 
+  &--active {
+    overflow: hidden;
+  }
+
   &__body {
     box-sizing: border-box;
     position: relative;
