--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -98,6 +98,7 @@
       height: 50px;
 
       padding: 18px 70px 18px 24px;
+      outline: none;
 
       &::placeholder {
         font-family: 'Montserrat', sans-serif;
