--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -43,6 +43,11 @@
     margin: 0 auto;
 
     overflow: hidden;
+    transition: transform $transitions;
+
+    &:hover {
+      transform: scale($scale);
+    }
 
     @include onTablet {
       max-width: 340px;
@@ -110,6 +115,12 @@
     }
 
     &-img1 {
+      transition: transform $transitions;
+
+      &:hover {
+        transform: scale($scale);
+      }
+
       @include onDesktop {
         width: 370px;
         height: 600px;
@@ -119,6 +130,12 @@
     }
 
     &-img2 {
+      transition: transform $transitions;
+
+      &:hover {
+        transform: scale($scale);
+      }
+
       @include onDesktop {
         width: 770px;
         height: 600px;
@@ -128,6 +145,12 @@
     }
 
     &-img3 {
+      transition: transform $transitions;
+
+      &:hover {
+        transform: scale($scale);
+      }
+
       @include onDesktop {
         width: 770px;
         height: 360px;
@@ -137,6 +160,12 @@
     }
 
     &-img4 {
+      transition: transform $transitions;
+
+      &:hover {
+        transform: scale($scale);
+      }
+      
       @include onDesktop {
         width: 370px;
         height: 360px;
