--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -22,7 +22,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    width: 100vw;
+    width: 100%;
     height: 300px;
 
     @include onTablet {
