--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -1,6 +1,6 @@
 .top-bar {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   gap: 92px;
 
@@ -43,6 +43,7 @@
 
   &__logo-link {
     display: flex;
+    margin-right: calc(50% - 26px);
 
     width: 54px;
     height: 60px;
@@ -54,6 +55,7 @@
 
     @include onTablet {
       grid-column: 4 / 6;
+      margin: 0;
       height: 72px;
       padding-left: 90px;
     }
