add transition for button

--- a/src/styles/blocs/page.scss
+++ b/src/styles/blocs/page.scss
@@ -7,12 +7,17 @@
   &:has(.page__menu:target) {
     overflow: hidden; /* not to scroll the page */
   }
-  
+
   &__body {
     margin: 0 auto;
     min-width: 320px;
     max-width: 1600px;
   }
+}
+
+:focus,
+:focus-visible {
+  outline: none;
 }
 
 h1,
