--- a/src/styles/blocs/subscript.scss
+++ b/src/styles/blocs/subscript.scss
@@ -70,19 +70,10 @@
       -moz-outline: none;
       -webkit-outline: none;
 
-      @include onTablet {
-        width: 347px;
-        height: 70px;
-      }
-
-      @include onDesktop {
-        width: 470px;
-      }
-
       &:hover,
       &:focus,
       &:active {
-        box-shadow: 0 0 10px 2 rgba(255, 255, 255, 0.5);
+        box-shadow: 0 0 10px 2px rgba(255, 255, 255, 0.5);
       }
 
       &:-webkit-autofill,
@@ -90,6 +81,15 @@
       &:-webkit-autofill:focus,
       &:-webkit-autofill:active {
         -webkit-box-shadow: 0 0 0 50px $c-white inset;
+      }
+
+      @include onTablet {
+        width: 347px;
+        height: 70px;
+      }
+
+      @include onDesktop {
+        width: 470px;
       }
     }
 
@@ -110,7 +110,12 @@
       }
 
       &:hover {
-        box-shadow: 0 0 10px 2 rgba(241, 74, 39, 0.5);
+        box-shadow: 0 0 10px 2px rgba(241, 74, 39, 0.5);
+      }
+
+      &:active {
+        transition: transform 0.1s;
+        transform: scale(0.9);
       }
     }
   }
