fix menu-shadow, logo it`s link, change positin logo and image in header for full hd

--- a/src/styles/blocs/header.scss
+++ b/src/styles/blocs/header.scss
@@ -14,6 +14,10 @@
     width: 100%;
     @include pageGrid;
     z-index: -1;
+
+    @media (min-width: 1920px) {
+      grid-template-columns: repeat(14, 1fr);
+    }
   }
 
   &__image--background {
