--- a/src/styles/blocs/top-bar.scss
+++ b/src/styles/blocs/top-bar.scss
@@ -48,5 +48,9 @@
       grid-column: 6 / 8;
       font-size: 36px;
     }
+
+    @media (min-width: 1600px) {
+      grid-column: 6 / 9;
+    }
   }
 }
