museum-landing complete

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,16 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/page";
+@import "blocks/icon";
+@import "blocks/title";
+@import "blocks/subtitle";
+@import "blocks/actual-date";
+@import "blocks/lection";
+@import "blocks/galery-slider";
+@import "blocks/galery-grid";
+@import "blocks/subscribe";
+@import "blocks/owl";
+@import "blocks/navigation";
+@import "blocks/header";
+@import "blocks/footer";
