--- a/src/styles/blocs/page.scss
+++ b/src/styles/blocs/page.scss
@@ -1,4 +1,7 @@
 .page {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
   scroll-behavior: smooth;
   outline: none;
   -moz-outline: none;
